styles/Page.module.scss
@use "@styles/breakpoint";
@use "@styles/mixins";

.container {
  @include mixins.container;
}

.header {
  text-align: center;
  margin: var(--spacing-section) 0;
  h1 {
    font-family: var(--font-names);
    color: var(--green);
    font-weight: 400;
    a {
      &:hover {
        color: var(--black);
      }
    }
  }
}

.wip {
  font-size: var(--font-size-h4);
  text-align: center;
  margin-top: 6rem;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5rem;
  margin-top: var(--spacing-section);
  @media (min-width: breakpoint.$md) {
    gap: 10rem;
  }
  .group {
    justify-content: center;
    align-items: center;
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
    margin-inline: auto;
    @media (min-width: breakpoint.$md) {
      grid-template-columns: 400px 5rem 400px;
    }
    h2 {
      white-space: nowrap;
      color: var(--green);
      font-family: var(--font-names);
      font-size: calc(var(--font-size-h2) * 1.5);
      text-align: center;
      font-weight: 400;
      margin-top: 0;
      @media (min-width: breakpoint.$md) {
        text-align: right;
      }
    }
    li {
      color: var(--black);
      margin-bottom: 2rem;
      text-align: center;
      padding: 0 2rem;
      a:not(.button) {
        &:link,
        &:visited {
          transition: all 250ms ease-in-out;
          color: var(--green);
        }
        &:hover,
        &:focus,
        &:active {
          text-decoration: underline;
        }
      }
    }
  }
}

.divider {
  width: 1px;
  height: 100%;
  background-color: var(--rust);
  margin: 0 auto;
  display: none;
  @media (min-width: breakpoint.$md) {
    display: block;
  }
}

.button {
  --offset: 10px;
  --border-size: 2px;

  display: block;
  position: relative;
  padding: 1rem;
  appearance: none;
  border: 0;
  background: transparent;
  color: var(--green);
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.25em;
  outline: none;
  cursor: pointer;
  font-weight: bold;
  border-radius: 0;
  box-shadow: inset 0 0 0 var(--border-size) var(--mustard);
  transition: background 0.8s ease;

  &:hover {
    background: rgba(100, 0, 0, 0.03);
  }

  &__horizontal,
  &__vertical {
    position: absolute;
    top: var(--horizontal-offset, 0);
    right: var(--vertical-offset, 0);
    bottom: var(--horizontal-offset, 0);
    left: var(--vertical-offset, 0);
    transition: transform 0.8s ease;
    will-change: transform;

    &::before {
      content: "";
      position: absolute;
      border: inherit;
    }
  }

  &__horizontal {
    --vertical-offset: calc(var(--offset) * -1);
    border-top: var(--border-size) solid var(--mustard);
    border-bottom: var(--border-size) solid var(--mustard);

    &::before {
      top: calc(var(--vertical-offset) - var(--border-size));
      bottom: calc(var(--vertical-offset) - var(--border-size));
      left: calc(var(--vertical-offset) * -1);
      right: calc(var(--vertical-offset) * -1);
    }
  }

  &:hover &__horizontal {
    transform: scaleX(0);
  }

  &__vertical {
    --horizontal-offset: calc(var(--offset) * -1);
    border-left: var(--border-size) solid var(--mustard);
    border-right: var(--border-size) solid var(--mustard);

    &::before {
      top: calc(var(--horizontal-offset) * -1);
      bottom: calc(var(--horizontal-offset) * -1);
      left: calc(var(--horizontal-offset) - var(--border-size));
      right: calc(var(--horizontal-offset) - var(--border-size));
    }
  }

  &:hover &__vertical {
    transform: scaleY(0);
  }
}

.textCenter {
  text-align: center;
}

